--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="hidden previousOperand"></div>
+        <div class="calculator">
+            <!-- first row -->
+            <div id="display" class="display">0</div> 
+
+            <!-- second row -->
+            <div class="clear sm-btn">AC</div>
+            <div id="divide" class="operation-btn sm-btn">&divide;</div>
+
+            <!-- third row -->
+            <div class="seven sm-btn num">7</div>
+            <div class="eight sm-btn num">8</div>
+            <div class="nine sm-btn num">9</div>
+            <div id="multiply" class="operation-btn sm-btn">&times;</div>
+
+            <!-- fourth row -->
+            <div class="four sm-btn num">4</div>
+            <div class="five sm-btn num">5</div>
+            <div class="six sm-btn num">6</div>
+            <div id="subtract" class="operation-btn sm-btn">&minus;</div>
+
+            <!-- fifth row -->
+            <div class="one sm-btn num">1</div>
+            <div class="two sm-btn num">2</div>
+            <div class="three sm-btn num">3</div>
+            <div id="add" class="operation-btn sm-btn">&plus;</div>
+
+            <!-- sixth row -->
+            <div class="zero sm-btn num">0</div>
+            <div class="decimal sm-btn num">.</div>
+            <div id="evaluate" class="equals operation-btn sm-btn">=</div>
+        </div>
+    </div>
 </body>
 </html>
